modified in mediafile

--- a/submit.html
+++ b/submit.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/media.css">
+    <script src="https://kit.fontawesome.com/ab6eca3c00.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <section class="header-submit"></section>
@@ -19,9 +20,12 @@
         <h3>Recipe Instructions </h3>
         <input class="btn-form" type="text"/>
         <h3>Recipe Image</h3>
-        <input class="btn-form" type="text"/>
+       
+            <input class="btn-form" type="text"/>
+            <!-- <i class="fa-solid fa-square-plus fa-xl" style="color: #22c32d;"></i> -->
+   
         <button type="submit">Submit</button>
     </form>
-    <h3>Recipe Title </h3>
+    
 </body>
 </html>
