--- a/list.html
+++ b/list.html
@@ -7,12 +7,50 @@
     <title>Recipe-TN</title>
     <link rel="stylesheet" href="assets/css/style.css" >
     <link rel="stylesheet" href="assets/css/media.css" >
+    <link rel="stylesheet" href="assets/fonts/font-awesome.css">
+    <script src="https://kit.fontawesome.com/edab36dc14.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header style="margin-bottom: 60px;">
 
       <div id="hero" style="position:inherit;">
-        <nav class="navbar navbar-light " >
+        <!-- <div id="hero"> -->
+          <nav class="navbar navbar-light " >
+              <a class="navbar-brand" href="#"  >
+                  <img src="assets/img/Recipe.png" alt="our-logo">
+              </a>
+          
+              <div class="atf-nav" style="list-style-type: none;">
+                  <ul class="atf-nav-list atf-onepage-nav" style="color: #1C598E; font-size: 18px;">
+                      <li style="padding: 0px 14px;"><a href="index.html"  style="color: #1C598E;">Home</a></li>
+                      <li style=" padding: 0px 14px;"><a href="list.html" 
+                        style="color: #F9AB01;">Recipes</a></li>
+                      <li style="padding: 0px 14px;"><a href="details.html"  style="color: #1C598E;">Blogs</a></li>
+                      <li  id="gallary" style="padding-left:14px;"><a href="submit.html" style="color: #1C598E;">Gallary</a></li>
+                      <!-- <li style="padding: 0px 110px 0px 14px;"> <a  >About Us</a></li> -->
+                      <section class="search" style="display:inline-block;">
+                      <button style="    
+                      border: #1C598E;
+                      border-style: solid;
+                      border-radius: 20px;
+                      width: 144px;
+                      height: 36px;
+                      font-size: 15px;
+                      color: white;
+                      text-align: left;
+                      background-color: #1C598E;
+                      opacity: 72%;
+                      "
+                      >Search
+                      <i class="fas fa-search" style="padding-left: 44px;"></i>
+                    </button>
+                    </section>
+                  </ul>
+              </div>
+          </nav>
+        
+
+        <!-- <nav class="navbar navbar-light " >
             <a class="navbar-brand" href="#"  >
                 <img src="assets/img/Recipe.png" alt="our-logo">
             </a>
@@ -42,7 +80,7 @@
                   </section>
                 </ul>
             </div>
-        </nav>
+        </nav> -->
       </div>
     </header >
     <!--------------------------------Our Recipe-------------------------->
