--- a/details.html
+++ b/details.html
@@ -7,11 +7,47 @@
     <title>Recipe-TN</title>
     <link rel="stylesheet" href="assets/css/style.css" >
     <link rel="stylesheet" href="assets/css/media.css" >
-    <script src="https://kit.fontawesome.com/ab6eca3c00.js" crossorigin="anonymous"></script>
+    <!-- <script src="https://kit.fontawesome.com/ab6eca3c00.js" crossorigin="anonymous"></script> -->
+    <link rel="stylesheet" href="assets/fonts/font-awesome.css">
+    <script src="https://kit.fontawesome.com/edab36dc14.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
-        <section class="header-container">
+        <div id="hero">
+            <nav class="navbar navbar-light " >
+                <a class="navbar-brand" href="#"  >
+                    <img src="assets/img/Recipe.png" alt="our-logo">
+                </a>
+            
+                <div class="atf-nav" style="list-style-type: none;">
+                    <ul class="atf-nav-list atf-onepage-nav" style="color: #1C598E; font-size: 18px;">
+                        <li style=" padding: 0px 14px;"><a href="index.html" style="color: #1C598E;">Home</a></li>
+                        <li style="padding: 0px 14px;"><a href="list.html"style="color: #1C598E;">Recipes</a></li>
+                        <li style=" padding: 0px 14px;"><a href="details.html" style="color: #F9AB01;" >Blogs</a></li>
+                        <li  id="gallary" style="padding-left:14px;"><a href="submit.html" style="color: #1C598E;">Gallary</a></li>
+                        <!-- <li style="padding: 0px 110px 0px 14px;"> <a  >About Us</a></li> -->
+                        <section class="search" style="display:inline-block;">
+                        <button style="    
+                        border: #1C598E;
+                        border-style: solid;
+                        border-radius: 20px;
+                        width: 144px;
+                        height: 36px;
+                        font-size: 15px;
+                        color: white;
+                        text-align: left;
+                        background-color: #1C598E;
+                        opacity: 72%;
+                        "
+                        >Search
+                        <i class="fas fa-search" style="padding-left: 44px;"></i>
+                      </button>
+                      </section>
+                    </ul>
+                </div>
+            </nav>
+          </div>
+        <!-- <section class="header-container">
             <section class="header-left">
                 <img src="./assets/img/Recipe.png" alt="logo">
             </section>
@@ -25,7 +61,7 @@
                 <input type="search" placeholder="search">
                 <i class="fa-solid fa-magnifying-glass" ></i>  
             </section>
-        </section>
+        </section> -->
     </header>
     <section class="detaile-container">
         <section class="img-detaile">
@@ -134,5 +170,40 @@
         <span><i class="fa-brands fa-instagram" style="color: #FAC552;"></i></span>
     </section>
    
+        <!-------------------------------------Footer Start------------------------------>
+
+<footer>
+    <div class="footer-left">
+        <img src="assets/img/Recipe.png" alt="FitGenie logo">
+      </div>
+  
+  <div class="footer-center">
+    <div class="footer-column">
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Workouts</a></li>
+        <li><a href="#">Nutrition</a></li>
+        <li><a href="#">Progress</a></li>
+      </ul>
+    </div>
+    <!-- <div class="footer-column">
+      <ul>
+        <li><a href="#">About us</a></li>
+        <li><a href="#">Contact us</a></li>
+        <li><a href="#">Terms &amp; Conditions</a></li>
+        <li><a href="#">Privacy Policy</a></li>
+      </ul>
+    </div> -->
+  </div>
+  <div class="footer-right">
+    <h3>Contact</h3>
+    <p>1-800-FITGENIE</p>
+    <p>support@fitgenie.com</p>
+  </div>
+  
+  </footer>
+  
+  
+  
 </body>
 </html>
