--- a/submit.html
+++ b/submit.html
@@ -20,11 +20,9 @@
         <h3>Recipe Instructions </h3>
         <input class="btn-form" type="text"/>
         <h3>Recipe Image</h3>
-       
-            <input class="btn-form" type="text"/>
-            <!-- <i class="fa-solid fa-square-plus fa-xl" style="color: #22c32d;"></i> -->
-   
-        <button type="submit">Submit</button>
+        <input class="btn-form" type="text"/>
+        <i id="icon-plus" class="fa-solid fa-square-plus fa-xl" style="color: #1C598E;"></i> 
+        <button id="btn-submit" type="submit" >Submit</button>
     </form>
     
 </body>
