--- a/details.html
+++ b/details.html
@@ -12,6 +12,57 @@
     <script src="https://kit.fontawesome.com/edab36dc14.js" crossorigin="anonymous"></script>
 </head>
 <body>
+      <header>
+        <div id="hero">
+            <nav class="navbar navbar-light " >
+                <a class="navbar-brand" href="#"  >
+                    <img src="assets/img/Recipe.png" alt="our-logo">
+                </a>
+            
+                <div class="atf-nav" style="list-style-type: none;">
+                    <ul class="atf-nav-list atf-onepage-nav" style="color: #1C598E; font-size: 18px;">
+                        <li style=" padding: 0px 14px;"><a href="index.html" style="color: #1C598E;">Home</a></li>
+                        <li style="padding: 0px 14px;"><a href="list.html"style="color: #1C598E;">Recipes</a></li>
+                        <li style=" padding: 0px 14px;"><a href="details.html" style="color: #F9AB01;" >Blogs</a></li>
+                        <li  id="gallary" style="padding-left:14px;"><a href="submit.html" style="color: #1C598E;">Gallary</a></li>
+                        <!-- <li style="padding: 0px 110px 0px 14px;"> <a  >About Us</a></li> -->
+                        <section class="search" style="display:inline-block;">
+                        <button style="    
+                        border: #1C598E;
+                        border-style: solid;
+                        border-radius: 20px;
+                        width: 144px;
+                        height: 36px;
+                        font-size: 15px;
+                        color: white;
+                        text-align: left;
+                        background-color: #1C598E;
+                        opacity: 72%;
+                        "
+                        >Search
+                        <i class="fas fa-search" style="padding-left: 44px;"></i>
+                      </button>
+                      </section>
+                    </ul>
+                </div>
+            </nav>
+          </div>
+        <!-- <section class="header-container">
+            <section class="header-left">
+                <img src="./assets/img/Recipe.png" alt="logo">
+            </section>
+            <section class="header-center">
+                <nav class="active">Home</nav>
+                <nav>Recipes</nav>
+                <nav>Blogs</nav>
+                <nav>Gallary</nav>       
+            </section>
+            <section class="header-right">
+                <input type="search" placeholder="search">
+                <i class="fa-solid fa-magnifying-glass" ></i>  
+            </section>
+        </section> -->
+    </header>
     <section class="detaile-container">
         <section class="img-detaile">
             <img src="./assets/img/basta.png" alt="basta">
