--- a/submit.html
+++ b/submit.html
@@ -58,7 +58,7 @@
         <input class="btn-form" type="text"/>
         <h3>Recipe Image</h3>
         <input class="btn-form" type="text"/>
-        <i id="icon-plus" class="fa-solid fa-square-plus fa-xl" style="color: #1C598E;"></i> 
+        <!-- <i id="icon-plus" class="fa-solid fa-square-plus fa-xl" style="color: #1C598E;"></i>  -->
         <button id="btn-submit" type="submit" >Submit</button>
     </form>
         <!-------------------------------------Footer Start------------------------------>
