--- a/details.html
+++ b/details.html
@@ -108,7 +108,7 @@
                 <section class="content-review">
                     <section class="name-rate">
                         <h4>Sam Lane</h4> 
-                        <section class="rate">
+                        <section id="ra" class="rate">
                             <i class="fa-solid fa-star" style="color: #FAC552;"></i>
                             <i class="fa-solid fa-star" style="color: #FAC552;"></i>
                             <i class="fa-solid fa-star" style="color: #FAC552;"></i>
@@ -131,7 +131,7 @@
                 <section class="content-review">
                     <section class="name-rate">
                         <h4>Sam Lane</h4> 
-                        <section class="rate">
+                        <section id="ra" class="rate">
                             <i class="fa-solid fa-star" style="color: #FAC552;"></i>
                             <i class="fa-solid fa-star" style="color: #FAC552;"></i>
                             <i class="fa-solid fa-star" style="color: #FAC552;"></i>
@@ -155,7 +155,7 @@
                 <section class="content-review">
                     <section class="name-rate">
                         <h4>Sam Lane</h4> 
-                        <section class="rate">
+                        <section id="ra" class="rate">
                             <i class="fa-solid fa-star" style="color: #FAC552;"></i>
                             <i class="fa-solid fa-star" style="color: #FAC552;"></i>
                             <i class="fa-solid fa-star" style="color: #FAC552;"></i>
